Add bcrypt dependency.

--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,5 @@
 % -*- mode: erlang -*-
+
+{deps,
+  [{bcrypt, "0.4.0", {git, "git://github.com/smarkets/erlang-bcrypt",
+                                  {tag, "0.4.0"}}}]}.
