--- a/rebar.config
+++ b/rebar.config
@@ -2,4 +2,6 @@
 
 {deps,
   [{bcrypt, "0.4.0", {git, "git://github.com/smarkets/erlang-bcrypt",
-                                  {tag, "0.4.0"}}}]}.
+                                  {tag, "0.4.0"}}},
+   {webmachine, "1.9.0", {git, "git://github.com/basho/webmachine",
+                                  {tag, "1.9.0"}}}]}.
